# GooseDevice-RW

./: CMakeLists.txt  README.md
include/: Defines.h  Logger.h  RFID.h  SQL_Conn.h  Serial.h  UtilityClass.h  WEIGHT.h  WeightReckon.h
src/: AnHuiTwoReaderMain.cpp  AnhuiMain.cpp  GXMain.cpp  Logger.cpp  SQL_Conn.cpp  STMain.cpp  Serial.cpp  UtilityClass.cpp  WeightReckon.cpp
